tests/invalid/not-expected-chars.cipl
$$this->:assa

@prop           
#col

## comment?